--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,24 @@
 server.port=8083
 server.servlet.context-path=/testspring
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/TestExam?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:8889/pi?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-
-# Kafka Consumer Configuration
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+#KAFKA
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=order-result-reader
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-# Kafka Producer Configuration
 spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
 
+api.key=JOBT7WM4D4VJE9T9
