📦 chore: add TransactionStatsController, TransactionStatsDTO, TransactionStats, TransactionStatsRepository, and TransactionStatsService 🔥 refactor: remove KafkaLogger and modify KafkaSubscriber 🔧 chore: add TransactionStatsService and modify application.properties
Added the following files:
- TransactionStatsController: A controller class that handles requests related to transaction statistics.
- TransactionStatsDTO: A DTO (Data Transfer Object) class that represents transaction statistics data.
- TransactionStats: An entity class that represents transaction statistics.
- TransactionStatsRepository: A repository interface for transaction statistics.
- TransactionStatsService: A service class that handles business logic related to transaction statistics.

Removed the KafkaLogger class and made modifications to the KafkaSubscriber class to handle transaction logging and update transaction statistics.

Modified the application.properties file to include a new property for the Kafka topic name.

These changes were made to add functionality for handling and storing transaction statistics in the application.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-
+tpd.topic-name=settled-order
 # Kafka Consumer Configuration
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=order-result-reader
